create new folder level 1 in water page , create all folder for pages

--- a/AppArduino/AppArduino/AppArduino.csproj
+++ b/AppArduino/AppArduino/AppArduino.csproj
@@ -52,13 +52,13 @@
 	  <MauiXaml Update="AboutPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
-	  <MauiXaml Update="Pages\CurrentPage.xaml">
+	  <MauiXaml Update="Pages\Current\CurrentPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
-	  <MauiXaml Update="Pages\LightPage.xaml">
+	  <MauiXaml Update="Pages\Light\LightPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
-	  <MauiXaml Update="Pages\MaterialsPage.xaml">
+	  <MauiXaml Update="Pages\Materials\MaterialsPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="MiastaPrzyszlosci.xaml">
@@ -67,19 +67,23 @@
 	  <MauiXaml Update="SettingsPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
-	  <MauiXaml Update="Pages\TransportPage.xaml">
+	  <MauiXaml Update="Pages\Transport\TransportPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
-	  <MauiXaml Update="Pages\WarmthPage.xaml">
+	  <MauiXaml Update="Pages\Warmth\WarmthPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
-	  <MauiXaml Update="Pages\WaterPage.xaml">
+	  <MauiXaml Update="Pages\Water\WaterPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	</ItemGroup>
 
 	<ItemGroup>
 	  <PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Pages\Water\Nowy folder\" />
 	</ItemGroup>
 
 </Project>
