add new shell - level 1 waterpage

--- a/AppArduino/AppArduino/AppArduino.csproj
+++ b/AppArduino/AppArduino/AppArduino.csproj
@@ -64,6 +64,9 @@
 	  <MauiXaml Update="MiastaPrzyszlosci.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Level 1\Level_1_WaterPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="SettingsPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
@@ -80,10 +83,6 @@
 
 	<ItemGroup>
 	  <PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Folder Include="Pages\Water\Nowy folder\" />
 	</ItemGroup>
 
 </Project>
